Fix background width in remote translations message
The `overflow: hidden` applied to the `.callout` selector made the full
width background invisible, meaning this section hasn't looked properly
on very large screens since  commit 701378d02.

--- a/app/assets/stylesheets/layout/remote_translations_button.scss
+++ b/app/assets/stylesheets/layout/remote_translations_button.scss
@@ -2,7 +2,9 @@
   text-align: center;
 
   &.callout {
+    border: 0;
     margin: 0;
+    overflow: visible;
     padding: rem-calc(6);
 
     [type="submit"] {
